[package]
name = "Charge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version = "0.27.1", features = ["fs", "ioctl"]}
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["signal"] }